[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemigo1.gd" type="Script" id=1]
[ext_resource path="res://enemy.png" type="Texture" id=2]
[ext_resource path="res://PlayerDetectionZone.gd" type="Script" id=3]
[ext_resource path="res://SoftCollision.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 59.1322

[sub_resource type="CircleShape2D" id=2]
radius = 895.143

[sub_resource type="CapsuleShape2D" id=3]
radius = 64.0
height = 0.0

[node name="enemigo1" type="KinematicBody2D" groups=[
"Enemy",
"Net",
]]
rotation = 1.5708
collision_layer = 16
collision_mask = 19
collision/safe_margin = 5.988
script = ExtResource( 1 )

[node name="AnimatedSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 31.4938, -8.1358 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2( 32, 0 )
shape = SubResource( 1 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
position = Vector2( 192, 0 )
shape = SubResource( 2 )

[node name="Health" type="Node2D" parent="."]

[node name="hurtBox" type="Area2D" parent="." groups=[
"Enemy",
]]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
modulate = Color( 0.0117647, 0.00784314, 0, 1 )
position = Vector2( 24, -8.58307e-05 )
shape = SubResource( 3 )

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]
[connection signal="body_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_exited"]
[connection signal="area_entered" from="hurtBox" to="." method="_on_hurtBox_area_entered"]
